# coursework

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
model/: gamerules.cpp  gamerules.h  match.cpp  match.h  matchevent.cpp  matchevent.h  player.cpp  player.h  team.cpp  team.h  tournament.cpp  tournament.h  tournamenttable.cpp  tournamenttable.h
simulation/: basicsimulation.cpp  basicsimulation.h  simulationstrategy.h
